force-app/main/default/objects/Program__c/fields/Accepting_Applications__c.field-meta.xml
<CustomField>
    <fullName>Accepting_Applications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accepting Applications</label>
    <type>Checkbox</type>
</CustomField>