force-app/main/default/objects/Program__c/fields/Application_Required__c.field-meta.xml
<CustomField>
    <fullName>Application_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Application Required</label>
    <type>Checkbox</type>
</CustomField>