force-app/main/default/objects/Program__c/fields/Associated_School__c.field-meta.xml
<CustomField>
    <fullName>Associated_School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated School</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>CircEsteem_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>