force-app/main/default/objects/Program__c/fields/Available_for_Financial_Aid__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Financial_Aid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for Financial Aid?</label>
    <type>Checkbox</type>
</CustomField>