force-app/main/default/objects/Program__c/fields/Campus__c.field-meta.xml
<CustomField>
    <fullName>Campus__c</fullName>
    <label>Campus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>