force-app/main/default/objects/Program__c/fields/Experience_Length__c.field-meta.xml
<CustomField>
    <fullName>Experience_Length__c</fullName>
    <label>Experience Length</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>