force-app/main/default/objects/Program__c/fields/Is_Program_Associated_with_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Program_Associated_with_Current_User__c</fullName>
    <formula>CASESAFEID(Associated_School__r.Id) =  $User.Account_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Program Associated with Current User?</label>
    <type>Checkbox</type>
</CustomField>