force-app/main/default/objects/Program__c/fields/Maximun_Age__c.field-meta.xml
<CustomField>
    <fullName>Maximun_Age__c</fullName>
    <label>Maximun Age</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>