force-app/main/default/objects/Program__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Programs</relationshipLabel>
    <relationshipName>CircEsteem_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>