force-app/main/default/objects/Program__c/fields/Skill_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Skill_Requirement__c</fullName>
    <label>Skill Requirement</label>
    <length>100</length>
    <type>Text</type>
</CustomField>