force-app/main/default/objects/Program__c/listViews/Active_Programs.listView-meta.xml
<ListView>
    <fullName>Active_Programs</fullName>
    <columns>NAME</columns>
    <columns>Accepting_Applications__c</columns>
    <columns>Associated_School__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Accepting_Applications__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Programs Currently Accepting Enrollment</label>
</ListView>