force-app/main/default/objects/Program__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Associated_School__c</columns>
    <columns>NAME</columns>
    <columns>Accepting_Applications__c</columns>
    <columns>Size__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>