force-app/main/default/objects/Program__c/listViews/My_School_s_Programs.listView-meta.xml
<ListView>
    <fullName>My_School_s_Programs</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Program_Associated_with_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My School&apos;s Programs</label>
</ListView>